--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "compression": "^1.4.3",
     "debug": "^2.1.3",
     "express": "^4.12.3",
+    "immutable": "^3.7.2",
     "isomorphic-fetch": "^2.0.1",
     "jquery": "^2.1.3",
     "morgan": "^1.5.2",
