--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "compression": "^1.4.3",
     "debug": "^2.1.3",
     "express": "^4.12.3",
+    "fuzzysearch": "^1.0.3",
     "immutable": "^3.7.2",
     "isomorphic-fetch": "^2.0.2",
     "morgan": "^1.5.2",
