--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --stats --config ./webpack/prod.config.js",
     "clean": "rm -rf public",
     "dev": "npm run assets; NODE_ENV=development DEBUG=app:* node index",
-    "linter": "eslint src && jscs src",
+    "linter": "eslint --ext .js,.jsx .",
     "start": "npm run assets; NODE_ENV=production PORT=2030 DEBUG=app:* node index"
   },
   "repository": {
@@ -34,11 +34,11 @@
     "serve-favicon": "^2.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^3.0.1",
     "babel-loader": "^5.0.0",
     "eslint": "^0.19.0",
     "eslint-plugin-react": "^2.1.1",
     "esprima-fb": "^14001.1.0-dev-harmony-fb",
-    "jscs": "^1.12.0",
     "react-hot-loader": "^1.2.5",
     "strip-loader": "^0.1.0",
     "webpack": "^1.8.4",
