--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "debug": "^2.2.0",
     "express": "^4.12.3",
     "immutable": "^3.7.2",
+    "intl": "^0.1.4",
     "morgan": "^1.5.3",
     "node-fetch": "^1.2.1",
     "react": "^0.13.3",
     "react-document-title": "^1.0.2",
     "react-immutable-proptypes": "^0.1.7",
     "react-immutable-render-mixin": "^0.8.1",
+    "react-intl": "^1.2.0",
     "react-router": "^0.13.3",
     "serve-favicon": "^2.2.0",
     "whatwg-fetch": "^0.8.1"
