--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "compression": "^1.4.4",
     "debug": "^2.2.0",
     "express": "^4.12.3",
+    "highlight.js": "^8.6.0",
     "immutable": "^3.7.2",
     "intl": "^0.1.4",
     "morgan": "^1.5.3",
     "node-fetch": "^1.2.1",
     "react": "^0.13.3",
     "react-document-title": "^1.0.2",
+    "react-highlight": "^0.4.1",
     "react-immutable-proptypes": "^0.1.7",
     "react-immutable-render-mixin": "^0.8.1",
     "react-intl": "^1.2.0",
