--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
     "no-undef": 1,
     "no-unused-expressions": 1,
     "no-unused-vars": 1,
+    "new-cap": [2, {
+      "capIsNewExceptions": ["List", "Map"]
+    }],
     "no-use-before-define": "nofunc",
     "react/jsx-boolean-value": [1, "never"],
     "react/jsx-no-undef": 1,
