--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "highlight.js": "^8.6.0",
     "immutable": "^3.7.4",
     "intl": "^1.0.0-rc-2",
+    "moment": "^2.10.3",
     "morgan": "^1.6.0",
     "node-fetch": "^1.3.0",
     "react": "^0.13.3",
