--- a/package.json
+++ b/package.json
@@ -17,39 +17,39 @@
   "author": "Christophe Benz <christophe.benz@data.gouv.fr>",
   "license": "AGPLv3+",
   "dependencies": {
-    "babel": "^5.2.17",
-    "babel-core": "^5.2.17",
-    "bootstrap": "^3.3.4",
-    "classnames": "^2.1.1",
-    "compression": "^1.4.4",
+    "babel": "^5.5.8",
+    "babel-core": "^5.5.8",
+    "bootstrap": "^3.3.5",
+    "classnames": "^2.1.2",
+    "compression": "^1.5.0",
     "debug": "^2.2.0",
-    "express": "^4.12.3",
+    "express": "^4.12.4",
     "highlight.js": "^8.6.0",
-    "immutable": "^3.7.2",
-    "intl": "^0.1.4",
-    "morgan": "^1.5.3",
-    "node-fetch": "^1.2.1",
+    "immutable": "^3.7.4",
+    "intl": "^1.0.0-rc-2",
+    "morgan": "^1.6.0",
+    "node-fetch": "^1.3.0",
     "react": "^0.13.3",
     "react-document-title": "^1.0.2",
     "react-highlight": "^0.4.1",
-    "react-immutable-proptypes": "^0.1.7",
+    "react-immutable-proptypes": "^1.0.0",
     "react-immutable-render-mixin": "^0.8.1",
     "react-intl": "^1.2.0",
     "react-router": "^0.13.3",
     "react-text-filter": "^1.0.1",
-    "serve-favicon": "^2.2.0",
-    "whatwg-fetch": "^0.8.1"
+    "serve-favicon": "^2.3.0",
+    "whatwg-fetch": "^0.9.0"
   },
   "devDependencies": {
-    "babel-eslint": "^3.1.1",
-    "babel-loader": "^5.0.0",
-    "eslint": "^0.21.0",
-    "eslint-plugin-react": "^2.2.0",
+    "babel-eslint": "^3.1.17",
+    "babel-loader": "^5.1.4",
+    "eslint": "^0.23.0",
+    "eslint-plugin-react": "^2.5.2",
     "json-loader": "^0.5.2",
     "react-hot-loader": "^1.2.7",
     "strip-loader": "^0.1.0",
-    "webpack": "^1.9.4",
-    "webpack-dev-server": "^1.8.2",
+    "webpack": "^1.9.11",
+    "webpack-dev-server": "^1.9.0",
     "webpack-error-notification": "^0.1.4"
   },
   "private": true
