--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel": "^5.5.8",
     "babel-core": "^5.5.8",
+    "babel-runtime": "^5.6.15",
     "bootstrap": "^3.3.5",
     "classnames": "^2.1.2",
     "compression": "^1.5.0",
@@ -39,6 +40,7 @@
     "react-router": "^0.13.3",
     "react-text-filter": "^1.0.1",
     "serve-favicon": "^2.3.0",
+    "trine": "0.0.0",
     "whatwg-fetch": "^0.9.0"
   },
   "devDependencies": {
