--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.1.2",
     "compression": "^1.5.0",
     "debug": "^2.2.0",
+    "emailjs": "^0.3.16",
     "express": "^4.12.4",
     "highlight.js": "^8.6.0",
     "immutable": "^3.7.4",
