Update .eslintrc rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,24 +2,24 @@
   "parser": "babel-eslint",
   "rules": {
     "camelcase": 0,
-    "comma-dangle": [2, "always-multiline"],
-    "max-len": [2, 120, 2],
-    "new-cap": [2, {
-      "capIsNewExceptions": ["List", "Map"]
-    }],
-    "no-undef": 2,
-    "no-unused-expressions": 2,
-    "no-unused-vars": 2,
-    "no-use-before-define": [2, "nofunc"],
-    "react/jsx-boolean-value": [2, "never"],
-    "react/jsx-no-undef": 2,
-    "react/jsx-quotes": [2, "double"],
-    "react/jsx-sort-props": 2,
-    "react/jsx-uses-react": 2,
-    "react/no-unknown-property": 2,
-    "react/prop-types": 2,
-    "react/self-closing-comp": 2,
-    "react/wrap-multilines": 2,
+    "comma-dangle": [1, "always-multiline"],
+    "max-len": [1, 120, 2],
+    "new-cap": [1],
+    "no-underscore-dangle": 0,
+    "no-undef": 1,
+    "no-unused-expressions": 1,
+    "no-unused-vars": 1,
+    "no-use-before-define": [1, "nofunc"],
+    "quotes": [2, "double", "avoid-escape"],
+    "react/jsx-boolean-value": [1, "never"],
+    "react/jsx-no-undef": 1,
+    "react/jsx-quotes": [1, "double"],
+    "react/jsx-sort-props": 1,
+    "react/jsx-uses-react": 1,
+    "react/no-unknown-property": 1,
+    "react/self-closing-comp": 1,
+    "react/wrap-multilines": 1,
+    "semi": [1, "never"],
     "strict": 0
   },
 
