--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   "author": "Christophe Benz <christophe.benz@data.gouv.fr>",
   "license": "AGPLv3+",
   "dependencies": {
-    "babel": "^5.5.8",
-    "babel-core": "^5.5.8",
-    "babel-runtime": "^5.6.15",
+    "babel-runtime": "^6.9.0",
     "bootstrap": "^3.3.5",
     "classnames": "^2.1.2",
     "compression": "^1.5.0",
@@ -44,8 +42,15 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.9.0",
     "babel-eslint": "^3.1.17",
-    "babel-loader": "^5.1.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.9.0",
     "eslint": "^0.23.0",
     "eslint-plugin-react": "^2.5.2",
     "json-loader": "^0.5.2",
