--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --stats --config ./webpack/prod.config.js",
     "clean": "rm -rf public",
     "dev": "NODE_ENV=development DEBUG=app:* node index",
+    "dev-prod-api": "NODE_ENV=development API_URL=http://api.openfisca.fr DEBUG=app:* node index",
     "linter": "eslint --ext .js,.jsx .",
     "start": "NODE_ENV=production PORT=2030 DEBUG=app:* node index"
   },
