--- a/package.json
+++ b/package.json
@@ -27,16 +27,19 @@
     "express": "^4.12.4",
     "highlight.js": "^8.6.0",
     "immutable": "^3.7.4",
-    "intl": "^1.0.0-rc-2",
-    "moment": "^2.10.3",
+    "install": "^0.8.1",
+    "intl": "^1.2.4",
     "morgan": "^1.6.0",
     "node-fetch": "^1.3.0",
-    "react": "^0.13.3",
+    "npm": "^3.9.3",
+    "pure-render-decorator": "^1.1.1",
+    "react": "^15.1.0",
     "react-document-title": "^1.0.4",
+    "react-dom": "^15.1.0",
     "react-immutable-proptypes": "^1.0.0",
-    "react-immutable-render-mixin": "^0.8.1",
-    "react-intl": "^1.2.0",
-    "react-router": "^0.13.3",
+    "react-immutable-render-mixin": "^0.9.6",
+    "react-intl": "^2.1.2",
+    "react-router": "^2.4.1",
     "react-text-filter": "^1.0.1",
     "serve-favicon": "^2.3.0",
     "trine": "0.0.0",
@@ -54,6 +57,7 @@
     "babel-register": "^6.9.0",
     "eslint": "^0.23.0",
     "eslint-plugin-react": "^2.5.2",
+    "intl-locales-supported": "^1.0.0",
     "json-loader": "^0.5.2",
     "react-hot-loader": "^1.2.7",
     "strip-loader": "^0.1.0",
