--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react": "^2.5.2",
     "json-loader": "^0.5.2",
     "react-hot-loader": "^1.2.7",
+    "standard": "^7.1.2",
     "strip-loader": "^0.1.0",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0",
