--- a/.eslintrc
+++ b/.eslintrc
@@ -1,45 +1,20 @@
 {
   "parser": "babel-eslint",
-  "rules": {
-    "camelcase": 0,
-    "comma-dangle": [1, "always-multiline"],
-    "max-len": [1, 120, 2],
-    "new-cap": [1],
-    "no-underscore-dangle": 0,
-    "no-undef": 1,
-    "no-unused-expressions": 1,
-    "no-unused-vars": 1,
-    "no-use-before-define": [1, "nofunc"],
-    "quotes": [2, "double", "avoid-escape"],
-    "react/jsx-boolean-value": [1, "never"],
-    "react/jsx-no-undef": 1,
-    "react/jsx-quotes": [1, "double"],
-    "react/jsx-sort-props": 1,
-    "react/jsx-uses-react": 1,
-    "react/no-unknown-property": 1,
-    "react/self-closing-comp": 1,
-    "react/wrap-multilines": 1,
-    "semi": [1, "never"],
-    "strict": 0
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
-
-  "ecmaFeatures": {
-    "jsx": true,
-    "modules": true
-  },
-
   "env": {
     "browser": true,
     "es6": true,
     "node": true
   },
-
-  "globals": {
-    "BROWSER": true
+  "rules": {
+      "no-console": "off"
   },
-
   "plugins": [
     "react"
-  ]
-
+  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended"]
 }
