--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "OpenFisca - Legislation Explorer",
   "scripts": {
     "assets": "./webpack/copy_assets.sh",
-    "build": "webpack --stats --config ./webpack/prod.config.js",
+    "build": "webpack --config ./webpack.config.prod.babel.js",
     "clean": "rm -rf public",
-    "dev": "NODE_ENV=development DEBUG=app:* node index",
-    "dev-prod-api": "NODE_ENV=development API_URL=https://api.openfisca.fr DEBUG=app:* node index",
+    "dev": "concurrently --kill-others 'npm run dev:app-server' 'npm run dev:webpack-dev-server'",
+    "dev:app-server": "NODE_ENV=development PORT=2030 node index.js",
+    "dev:webpack-dev-server": "WEBPACK_PORT=2031 babel-node src/server/webpack-dev-server.js",
+    "dev:prod-api": "API_URL=https://api.openfisca.fr npm run dev",
     "linter": "eslint --ext .js,.jsx .",
-    "start": "NODE_ENV=production PORT=2030 DEBUG=app:* node index"
+    "start": "NODE_ENV=production PORT=2030 node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,50 +20,39 @@
   "author": "Christophe Benz <christophe.benz@data.gouv.fr>",
   "license": "AGPLv3+",
   "dependencies": {
-    "babel-runtime": "^6.9.0",
+    "babel-cli": "^6.11.4",
     "bootstrap": "^3.3.5",
     "classnames": "^2.2.5",
-    "compression": "^1.5.0",
-    "debug": "^2.2.0",
-    "emailjs": "^0.3.16",
+    "emailjs": "^1.0.5",
     "express": "^4.12.4",
-    "highlight.js": "^8.6.0",
-    "immutable": "^3.7.4",
-    "install": "^0.8.1",
+    "highlight.js": "^9.6.0",
     "intl": "^1.2.4",
-    "morgan": "^1.6.0",
-    "node-fetch": "^1.3.0",
-    "npm": "^3.9.3",
-    "pure-render-decorator": "^1.1.1",
+    "intl-locales-supported": "^1.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "ramda": "^0.22.1",
     "react": "^15.1.0",
-    "react-document-title": "^1.0.4",
+    "react-document-title": "^2.0.2",
     "react-dom": "^15.1.0",
-    "react-immutable-proptypes": "^1.0.0",
-    "react-immutable-render-mixin": "^0.9.6",
     "react-intl": "^2.1.2",
     "react-router": "^2.4.1",
-    "react-text-filter": "^1.0.1",
-    "serve-favicon": "^2.3.0",
-    "trine": "0.0.0",
-    "whatwg-fetch": "^1.0.0"
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
-    "babel-eslint": "^3.1.17",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
-    "eslint": "^0.23.0",
-    "eslint-plugin-react": "^2.5.2",
-    "intl-locales-supported": "^1.0.0",
-    "json-loader": "^0.5.2",
-    "react-hot-loader": "^1.2.7",
-    "standard": "^7.1.2",
-    "strip-loader": "^0.1.0",
+    "concurrently": "^2.2.0",
+    "copy-webpack-plugin": "^3.0.1",
+    "eslint": "^3.3.1",
+    "eslint-plugin-react": "^6.1.2",
+    "piping": "^1.0.0-rc.3",
+    "react-transform-hmr": "^1.0.4",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0",
     "webpack-error-notification": "^0.1.4"
