--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "piwik-react-router": "^0.4.0",
     "ramda": "^0.22.1",
     "react": "^15.1.0",
     "react-document-title": "^2.0.2",
