--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-intl": "^2.1.2",
     "react-router": "^2.4.1",
     "react-treeview": "^0.4.5",
+    "remove-accents": "^0.4.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
