--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-cli": "^6.11.4",
     "bootstrap": "^3.3.5",
     "classnames": "^2.2.5",
+    "diacritics": "^1.3.0",
     "emailjs": "^1.0.5",
     "express": "^4.12.4",
     "intl": "^1.2.4",
@@ -35,7 +36,6 @@
     "react-intl": "^2.1.2",
     "react-router": "^2.4.1",
     "react-treeview": "^0.4.5",
-    "remove-accents": "^0.4.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
