Add test script to package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:webpack-dev-server": "WEBPACK_PORT=2031 babel-node src/server/webpack-dev-server.js",
     "dev:prod-api": "API_URL=https://api.openfisca.fr npm run dev",
     "lint": "eslint --ext .js,.jsx .",
-    "start": "NODE_ENV=production PORT=2030 node index.js"
+    "start": "NODE_ENV=production PORT=2030 node index.js",
+    "test": "npm run lint && npm run build"
   },
   "repository": {
     "type": "git",
