Fix branch name

--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,5 @@
 deployment:
   production:
-    branch: continuous-deployment
+    branch: master
     commands:
       - ssh -l openfisca legislation.openfisca.fr "cd legislation-explorer; ./deploy_prod.sh"
