--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:prod-api": "API_URL=https://api.openfisca.fr npm run dev",
     "lint": "eslint --ext .js,.jsx .",
     "start": "NODE_ENV=production PORT=2030 node index.js",
-    "test": "npm run lint && npm run build",
+    "test": "npm run lint && npm run build && npm run test:integration",
     "test:integration": "watai tests"
   },
   "repository": {
