--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:prod-api": "API_URL=https://api.openfisca.fr npm run dev",
     "lint": "eslint --ext .js,.jsx .",
     "start": "NODE_ENV=production PORT=2030 node index.js",
-    "test": "npm run lint && npm run build"
+    "test": "npm run lint && npm run build",
+    "test:integration": "watai tests"
   },
   "repository": {
     "type": "git",
@@ -55,6 +56,7 @@
     "eslint-plugin-react": "^6.1.2",
     "piping": "^1.0.0-rc.3",
     "react-transform-hmr": "^1.0.4",
+    "watai": "^0.7.0",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0",
     "webpack-error-notification": "^0.1.4"
