--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
     browser_name: $(case $CIRCLE_NODE_INDEX in 0) browser='chrome' ;; 1) browser='firefox' ;; 2) browser='internet explorer' ;; 3) browser='iphone' ;; esac; echo $browser)
     browser_version: $(case $CIRCLE_NODE_INDEX in 3) version='8.2' ;; esac; echo $version)
     SAUCE_LOG: $CIRCLE_ARTIFACTS/sauce_log.txt
-    WATAI_TESTS: tests/integration
+    WATAI_TESTS: tests
     SAUCE_USERNAME: cbenz
     # SAUCE_ACCESS_KEY is defined in the CircleCI web UI
     PORT: 2030 # Legislation Explorer ExpressJS server port
@@ -36,7 +36,7 @@ test:
         parallel: true
 
   override:
-    - watai $WATAI_TESTS --config '{"driverCapabilities":{"browserName":"'"$browser_name"'","version":"'"$browser_version"'"}}':
+    - npm test -- --config '{"driverCapabilities":{"browserName":"'"$browser_name"'","version":"'"$browser_version"'"}}':
         parallel: true
 
   post:
