--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "node": true
   },
   "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "space-infix-ops": "error"
   },
   "plugins": [
     "react"
