Do not ensure propTypes anymore as they are deprecated

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
   },
   "rules": {
       "no-console": "off",
-      "space-infix-ops": "error"
+      "space-infix-ops": "error",
+      "react/prop-types": "off"
   },
   "plugins": [
     "react"
