--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "https://github.com/openfisca/legislation-explorer.git"
   },
-  "author": "Christophe Benz <christophe.benz@data.gouv.fr>",
+  "author": "OpenFisca <contact@openfisca.fr>",
   "license": "AGPLv3+",
   "dependencies": {
     "babel-cli": "^6.11.4",
