--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "copy-webpack-plugin": "^3.0.1",
     "eslint": "^3.3.1",
     "eslint-plugin-react": "^6.1.2",
+    "json-loader": "^0.5.4",
     "piping": "^1.0.0-rc.3",
     "react-transform-hmr": "^1.0.4",
     "watai": "^0.7.0",
