--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "json-loader": "^0.5.4",
     "piwik-react-router": "^0.4.0",
     "ramda": "^0.23.0",
-    "react": "15.1.0",
+    "react": "^15.1.0",
     "react-document-title": "^2.0.2",
-    "react-dom": "15.1.0",
-    "react-intl": "2.1.2",
+    "react-dom": "^15.1.0",
+    "react-intl": "^2.1.2",
     "react-router": "^2.4.1",
     "serve-favicon": "^2.3.0",
     "swagger-ui": "3.0.12",
