--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     version: 6
   environment:
     SAUCE_LOG: $CIRCLE_ARTIFACTS/sauce_log.txt
-    WATAI_TESTS: tests
+    WATAI_TESTS: tests/integration
     SAUCE_USERNAME: openfisca
     # SAUCE_ACCESS_KEY is defined in the CircleCI web UI
     PORT: 2030 # Legislation Explorer ExpressJS server port
