--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:prod-api": "API_URL=https://api-test.openfisca.fr npm run dev",
     "lint": "eslint --ext .js,.jsx .",
     "start": "NODE_ENV=production PORT=2030 node index.js",
-    "test": "npm run lint && watai tests"
+    "unit-test": "mocha --compilers js:babel-core/register tests/unit/**/*.js",
+    "test": "npm run lint && npm run unit-test && watai tests/integration"
   },
   "repository": {
     "type": "git",
@@ -57,6 +58,7 @@
     "eslint": "^3.3.1",
     "eslint-plugin-react": "^6.1.2",
     "json-loader": "^0.5.4",
+    "mocha": "^3.4.2",
     "piping": "^1.0.0-rc.3",
     "react-transform-hmr": "^1.0.4",
     "watai": "^0.7.0",
