--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^15.1.0",
     "react-intl": "^2.1.2",
     "react-router": "^2.4.1",
+    "react-syntax-highlighter": "^5.6.2",
     "serve-favicon": "^2.3.0",
     "swagger-ui": "3.0.15",
     "winston": "^2.3.1"
