--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "mocha": "^3.4.2",
     "piping": "^1.0.0-rc.3",
     "react-transform-hmr": "^1.0.4",
+    "should": "^11.2.1",
     "watai": "^0.7.0",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0",
