--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-register": "^6.9.0",
     "concurrently": "^2.2.0",
     "copy-webpack-plugin": "^3.0.1",
+    "enzyme": "^2.9.1",
     "eslint": "^3.3.1",
     "eslint-plugin-react": "^6.1.2",
     "json-loader": "^0.5.4",
