--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "piping": "^1.0.0-rc.3",
     "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
     "react-transform-hmr": "^1.0.4",
     "should": "^11.2.1",
     "watai": "^0.7.0",
