Correct license SPDX identifier

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/openfisca/legislation-explorer.git"
   },
   "author": "Christophe Benz <christophe.benz@data.gouv.fr>",
-  "license": "AGPLv3+",
+  "license": "AGPL-3.0",
   "dependencies": {
     "accept-language": "^3.0.17",
     "babel-cli": "^6.11.4",
