--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "dev:prod-api": "API_URL=http://fr.openfisca.org/api/v2 npm run dev",
     "lint": "eslint --ext .js,.jsx .",
     "start": "NODE_ENV=production PORT=2030 node index.js",
-    "unit-test": "mocha --compilers js:babel-core/register tests/unit/**/*.js",
-    "test": "npm run lint && npm run unit-test && watai tests/integration"
+    "test:unit": "mocha --compilers js:babel-core/register tests/unit/**/*.js",
+    "test:integration": "watai tests/integration",
+    "test": "npm run lint && npm run test:unit && npm run test:integration"
   },
   "repository": {
     "type": "git",
