--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "node": true
   },
   "rules": {
+      "space-before-blocks": "error",
       "no-console": "off",
       "space-infix-ops": "error",
       "react/prop-types": "off",
