Make space before arrow more coherent

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "node": true
   },
   "rules": {
+      "arrow-spacing": "error",
       "space-before-blocks": "error",
       "no-console": "off",
       "space-infix-ops": "error",
