Specify sauce connect version

--- a/circle.yml
+++ b/circle.yml
@@ -11,8 +11,8 @@ machine:
 dependencies:
   post:
     - npm install saucelabs # allow sending Watai results to SauceLabs
-    - wget https://saucelabs.com/downloads/sc-latest-linux.tar.gz
-    - tar -xzf sc-latest-linux.tar.gz
+    - wget https://saucelabs.com/downloads/sc-4.4.9-linux.tar.gz
+    - tar -xzf sc-4.4.9-linux.tar.gz
     - npm run build
 
 test:
