--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.2.5",
     "diacritics": "^1.3.0",
     "express": "^4.12.4",
+    "history": "^2.1.2",
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
