--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,10 @@
 {
-  "parser": "babel-eslint",
   "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
+      "experimentalObjectRestSpread": true
     }
   },
   "env": {
@@ -20,7 +22,6 @@
       "jsx-quotes": "error",
       "no-trailing-spaces": "error",
       "eol-last": "error",
-      "react/jsx-equals-spacing": [2, "never"],
       "key-spacing": ["error", { "beforeColon": false, "afterColon": true }],
       "indent": [2, 2]
   },
