--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
       "no-trailing-spaces": "error",
       "eol-last": "error",
       "react/jsx-equals-spacing": [2, "never"],
-      "key-spacing": ["error", { "beforeColon": false, "afterColon": true }]
+      "key-spacing": ["error", { "beforeColon": false, "afterColon": true }],
+      "indent": [2, 2]
   },
   "plugins": [
     "react"
