--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
       "no-trailing-spaces": "error",
       "eol-last": "error",
       "key-spacing": ["error", { "beforeColon": false, "afterColon": true }],
-      "indent": [2, 2]
+      "indent": [2, 2],
+      "semi": ["error", "never"],
   },
   "plugins": [
     "react"
