Use prop-types as React.PropTypes is deprecated
These changes are required if we want to upgrade our app's React
version.

--- a/package.json
+++ b/package.json
@@ -41,15 +41,16 @@
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "piwik-react-router": "^0.4.0",
+    "prop-types": "^15.6.2",
     "ramda": "^0.23.0",
-    "react": "^15.1.0",
+    "react": "^15.6.2",
     "react-document-title": "^2.0.2",
-    "react-dom": "^15.6.1",
+    "react-dom": "^15.6.2",
     "react-highlight": "^0.10.0",
     "react-intl": "^2.1.2",
-    "react-router": "^2.4.1",
+    "react-router": "^3.2.1",
     "serve-favicon": "^2.3.0",
-    "swagger-ui": "3.0.15",
+    "swagger-ui": "^3.17.3",
     "webpack": "^1.9.11",
     "winston": "^2.3.1"
   },
@@ -61,7 +62,7 @@
     "mocha": "^3.4.2",
     "piping": "^1.0.0-rc.3",
     "react-addons-test-utils": "^15.6.0",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "^15.6.2",
     "react-transform-hmr": "^1.0.4",
     "should": "^11.2.1",
     "watai": "^0.7.0",
