--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "react-router": "^3.2.1",
     "serve-favicon": "^2.3.0",
     "swagger-ui": "^3.17.3",
-    "webpack": "^1.9.11",
-    "winston": "^2.3.1"
+    "webpack": "^1.9.11"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
