Load host and port through env variables only
Define default values and load actual ones in a single place

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build:tunisia": "COUNTRY_PRODUCTION_CONFIG=tunisia webpack --config ./webpack.config.prod.babel.js",
     "clean": "rm -rf public",
     "dev": "concurrently --kill-others 'npm run dev:app-server' 'npm run dev:webpack-dev-server'",
-    "dev:app-server": "NODE_ENV=development PORT=2030 node index.js",
+    "dev:app-server": "NODE_ENV=development node index.js",
     "dev:webpack-dev-server": "WEBPACK_PORT=2031 babel-node src/server/webpack-dev-server.js",
     "lint": "eslint --ext .js,.jsx .",
-    "start": "NODE_ENV=production PORT=2030 node index.js",
+    "start": "NODE_ENV=production node index.js",
     "test:unit": "mocha --compilers js:babel-core/register tests/unit/**/*.js",
     "test:integration": "watai tests/integration",
     "test": "npm run lint && npm run test:unit && npm run test:integration"
