--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^3.3.5",
     "copy-webpack-plugin": "^3.0.1",
     "diacritics": "^1.3.0",
+    "dotenv": "^6.0.0",
     "express": "^4.12.4",
     "history": "^2.1.2",
     "intl": "^1.2.4",
