List all available env vars in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+HOST=0.0.0.0
+PORT=2030
+PATHNAME=/
+
 API_URL=http://0.0.0.0:5000
 CHANGELOG_URL=https://github.com/openfisca/country-template/blob/master/CHANGELOG.md
+
 UI_STRINGS={"en":{"countryName":"the development environment"},"fr":{"countryName":"l’environnement de développement"}}
+
+MATOMO_URL=https://stats.data.gouv.fr
+MATOMO_SITE_ID=4
