--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 version: 2
 jobs:
   build:
-    # parallelism: 4
+    parallelism: 4
     docker:
       - image: circleci/node:8-jessie-browsers
     environment:
