--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,8 @@
 {
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2017,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true,
-      "experimentalObjectRestSpread": true
-    }
+    "sourceType": "module"
   },
   "env": {
     "browser": true,
@@ -15,7 +12,7 @@
   "rules": {
       "arrow-spacing": "error",
       "eol-last": "error",
-      "indent": [2, 2],
+      "indent": ["error", 2],
       "jsx-quotes": "error",
       "key-spacing": ["error", { "beforeColon": false, "afterColon": true }],
       "keyword-spacing": "error",
