--- a/package.json
+++ b/package.json
@@ -54,9 +54,10 @@
     "webpack": "^1.9.11"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "concurrently": "^2.2.0",
     "enzyme": "2.9.1",
-    "eslint": "^3.19.0",
+    "eslint": "^5.4.0",
     "eslint-plugin-react": "^6.10.3",
     "mocha": "^5.2.0",
     "piping": "^1.0.0-rc.3",
