--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "accept-language": "^3.0.17",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.9.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-react-transform": "^2.0.2",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "bootstrap": "^3.3.5",
-    "copy-webpack-plugin": "^3.0.1",
+    "copy-webpack-plugin": "^4.5.2",
     "diacritics": "^1.3.0",
     "dotenv": "^6.0.0",
     "express": "^4.12.4",
@@ -51,11 +51,11 @@
     "react-router": "^3.2.1",
     "serve-favicon": "^2.3.0",
     "swagger-ui": "~3.17.3",
-    "webpack": "^1.9.11"
+    "webpack": "^4.16.5"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
-    "concurrently": "^2.2.0",
+    "concurrently": "^3.6.1",
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^5.4.0",
@@ -65,8 +65,9 @@
     "react-transform-hmr": "^1.0.4",
     "should": "^13.2.3",
     "watai": "^0.7.0",
-    "webpack-dev-server": "^1.9.0",
-    "webpack-error-notification": "^0.1.4"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-error-notification": "^0.1.8"
   },
   "private": true
 }
