--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-router": "^3.2.1",
     "serve-favicon": "^2.3.0",
     "swagger-ui": "~3.17.3",
-    "webpack": "^4.16.5"
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
@@ -65,7 +66,6 @@
     "react-transform-hmr": "^1.0.4",
     "should": "^13.2.3",
     "watai": "^0.7.0",
-    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-error-notification": "^0.1.8"
   },
