--- a/.circleci/.env.ci
+++ b/.circleci/.env.ci
@@ -1,4 +1,4 @@
-API_URL=https://fr.openfisca.org/api/v24
-CHANGELOG_URL=https://github.com/openfisca/openfisca-france/blob/master/CHANGELOG.md
+API_URL=http://demo.openfisca.org/api
+CHANGELOG_URL=https://github.com/openfisca/country-template/blob/master/CHANGELOG.md
 
-UI_STRINGS={"en":{"countryName":"France", "search_placeholder": "smic, salaire net"},"fr":{"countryName":"France", "search_placeholder": "smic, salaire net"}}
+UI_STRINGS={"en":{"countryName":"Demo", "search_placeholder": "tax, salary"},"fr":{"countryName":"Demo", "search_placeholder": "tax, salary"}}
