--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "ramda": "^0.25.0",
     "react": "^16.5.2",
     "react-document-title": "^2.0.2",
-    "react-highlight": "^0.12.0",
     "react-dom": "^16.5.2",
+    "react-highlight": "^0.12.0",
     "react-intl": "^2.7.1",
-    "react-router": "^4.0.0",
+    "react-router-dom": "^4.3.1",
     "serve-favicon": "^2.3.0",
     "swagger-ui": "~3.17.6",
     "webpack": "^4.16.5",
