Use the default value of the local API
Co-authored-by: Matti Schneider <matti.schneider@beta.gouv.fr>

--- a/ops/ansible/roles/legislation_explorer/defaults/main.yml
+++ b/ops/ansible/roles/legislation_explorer/defaults/main.yml
@@ -1,4 +1,4 @@
-legislation_explorer_api_url: http://openfisca-api.example
+legislation_explorer_api_url: http://localhost:8000
 legislation_explorer_base_url_path: /legislation
 legislation_explorer_branch_name: master
 legislation_explorer_changelog_url: https://github.com/openfisca/openfisca-france/blob/master/CHANGELOG.md
