--- a/ops/ansible/inventories/YOUR_INVENTORY.yml
+++ b/ops/ansible/inventories/YOUR_INVENTORY.yml
@@ -3,5 +3,5 @@ all:
     target.ip.or.domain.com: # define here the target machine’s IP or domain name
       ansible_user: root # define here the username to use when connecting over SSH
       # adjust the variables defined in `ansible/roles/legislation_explorer/defaults/main.yml` below:
-      legislation_explorer_api_url: https://my-openfisca-api.example/api/latest
-      legislation_explorer_host_name: my-legislation-explorer.example
+      api_url: https://my-openfisca-api.example/api/latest
+      host_name: my-legislation-explorer.example
