--- a/ops/ansible/roles/legislation_explorer/defaults/main.yml
+++ b/ops/ansible/roles/legislation_explorer/defaults/main.yml
@@ -1,33 +1,33 @@
-legislation_explorer_api_url: http://localhost:8000
-legislation_explorer_base_url_path: /legislation
-legislation_explorer_branch_name: master
-legislation_explorer_changelog_url: https://github.com/openfisca/openfisca-france/blob/master/CHANGELOG.md
-legislation_explorer_host: 127.0.0.1
-legislation_explorer_http_port: 8001
-legislation_explorer_repo_url: https://github.com/openfisca/legislation-explorer.git
-legislation_explorer_ui_strings: |
+api_url: http://localhost:8000
+base_url_path: /legislation
+branch_name: master
+changelog_url: https://github.com/openfisca/openfisca-france/blob/master/CHANGELOG.md
+host: 127.0.0.1
+http_port: 8001
+repo_url: https://github.com/openfisca/legislation-explorer.git
+ui_strings: |
   {
     "en":
       { "countryName": "France", "search_placeholder": "smic, salaire net" },
     "fr":
       { "countryName": "France", "search_placeholder": "smic, salaire net" }
   }
-legislation_explorer_systemd_service_file_path: /etc/systemd/system/legislation-explorer.service
-legislation_explorer_unix_group_name: openfisca
-legislation_explorer_unix_user_name: legislation-explorer
+systemd_service_file_path: /etc/systemd/system/legislation-explorer.service
+unix_group_name: openfisca
+unix_user_name: legislation-explorer
 
 # Nginx
 
-legislation_explorer_host_name: legislation-explorer.example
+host_name: legislation-explorer.example
 
 # Optional: SSL certificate
-# An SSL certificate is issued from Let's Encrypt if `legislation_explorer_enable_ssl` and `legislation_explorer_letsencrypt_email` are both defined.
-legislation_explorer_enable_ssl: no
-legislation_explorer_letsencrypt_email: null
+# An SSL certificate is issued from Let's Encrypt if `enable_ssl` and `letsencrypt_email` are both defined.
+enable_ssl: no
+letsencrypt_email: null
 # Start by testing with staging environment, then switch to production once it works, to avoid reaching Let's Encrypt limits.
-legislation_explorer_letsencrypt_environment: "staging"
+letsencrypt_environment: "staging"
 
 # Optional: Matomo tracker
 
-legislation_explorer_matomo_url: null
-legislation_explorer_matomo_site_id: null
+matomo_url: null
+matomo_site_id: null
