--- a/ops/Vagrantfile
+++ b/ops/Vagrantfile
@@ -1,4 +1,9 @@
-port = ENV["PORT"] || 8000
+guest_port = 8001
+
+# From inside the VM, the IP address of the host is fixed to this value, by convention.
+host_ip_from_guest = "192.168.0.1"
+
+host_port = ENV["PORT"] || 8001
 
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
@@ -6,7 +11,8 @@ Vagrant.configure("2") do |config|
   # Used to refer to this VM from Ansible playbooks.
   config.vm.define "legislation_explorer"
 
-  config.vm.network "forwarded_port", guest: 80, host: port
+  config.vm.network "private_network", type: "dhcp"
+  config.vm.network "forwarded_port", guest: guest_port, host: host_port
 
   config.vm.provider :virtualbox do |v|
     # Building Legislation Explorer takes more than the default 1024MB of memory.
@@ -27,10 +33,16 @@ Vagrant.configure("2") do |config|
     ansible.compatibility_mode = "2.0"
     ansible.playbook = "ansible/site.yml"
 
-    # Uncomment to define Ansible variables specific to this VM.
     ansible.host_vars = {
       "legislation_explorer" => {
-        "host_name" => "legislation-explorer.local"
+        # Use the API from another local VM.
+        "api_url" => "http://#{host_ip_from_guest}:8000",
+
+        # Use the online API instance serving OpenFisca-France.
+        # "api_url" => "https://api.fr.openfisca.org/api/latest",
+
+        "host" => "0.0.0.0",
+        "http_port" => guest_port,
       }
     }
   end
