--- a/ops/Vagrantfile
+++ b/ops/Vagrantfile
@@ -3,7 +3,7 @@ guest_port = 8001
 host_port = ENV["PORT"] || 8001
 
 # From inside the VM, the IP address of the host is fixed to this value, by convention.
-host_ip_from_guest = "192.168.0.1"
+host_ip_from_guest = "192.168.42.1"
 
 
 Vagrant.configure("2") do |config|
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
   # Used to refer to this VM from Ansible playbooks.
   config.vm.define "legislation_explorer"
 
-  config.vm.network "private_network", type: "dhcp"
+  config.vm.network "private_network", ip: "192.168.42.10"
   config.vm.network "forwarded_port", guest: guest_port, host: host_port
 
   config.vm.provider :virtualbox do |v|
