--- a/ops/Vagrantfile
+++ b/ops/Vagrantfile
@@ -43,7 +43,7 @@ Vagrant.configure("2") do |config|
         # "api_url" => "https://api.fr.openfisca.org/api/latest",
 
         "host" => "0.0.0.0",
-        "http_port" => guest_port,
+        "port" => guest_port,
       }
     }
   end
