Use the new API instance

--- a/ops/ansible/inventories/fr.openfisca.org.yml
+++ b/ops/ansible/inventories/fr.openfisca.org.yml
@@ -6,5 +6,5 @@ all:
       host_name: fr.openfisca.org
       base_path: /legislation
 
-      api_url: https://fr.openfisca.org/api/latest
+      api_url: https://api.fr.openfisca.org/api/latest
       port: 8100
